--- a/POKEDEX/index.html
+++ b/POKEDEX/index.html
@@ -23,8 +23,36 @@
 </head>
 <body>
 
-    <H1>Meu primeiro site</H1>
-    <p>Meu primeiro site está sendo feito junto de um curso da DIO</p>
+    <section class="content">
+        <h1>Pokedex</h1>
+
+        <ol class="pokemons">
+            <li>
+                Bulbasaur
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="Bulbasaur">
+            </li>
+            <li>
+                Ivysaur
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/2.svg" alt="Ivysaur">
+            </li>
+            <li>
+                Venusaur
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/3.svg" alt="Venusaur">
+            </li>
+            <li>
+                Charmander
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/4.svg" alt="Charmander">
+            </li>
+            <li>
+                Charmilion
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/5.svg" alt="Charmilion">
+            </li>
+            <li>
+                Charizard
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/6.svg" alt="Charizard">
+            </li>
+        </ol>
+    </section>
 
 
  <!--Nosso JS-->
