--- a/POKEDEX/index.html
+++ b/POKEDEX/index.html
@@ -50,5 +50,7 @@
 
  <!--Nosso JS-->
 <script> src="assets/js/main.js"</script>
+<script> src="assets/js/poke-api.js"</script>
+<script> src="assets/js/pokemon-model.js"</script>
 </body>
 </html>
