--- a/Desafio_01/index.html
+++ b/Desafio_01/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTAL DE NOTICÍAS GALACTICA</title>
     <link rel="stylesheet" href="styles/card.css">
+    <script src="src/components/CardNews.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -25,6 +26,8 @@
             </div>
         </div>
     </div>
+
+    <card-news></card-news>
     
 </body>
 </html>
