--- a/Desafio_01/index.html
+++ b/Desafio_01/index.html
@@ -7,6 +7,7 @@
     <title>PORTAL DE NOTICÍAS GALACTICA</title>
     <link rel="stylesheet" href="styles/card.css">
     <script src="src/components/CardNews.js" defer></script>
+    <script src="src/components/TituloDinamico.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -28,6 +29,7 @@
     </div>
 
     <card-news></card-news>
+    <titulo-dinamico titulo ="Noticia Urgente"></titulo-dinamico>
     
 </body>
 </html>
